--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,7 @@ background-color: #f3d2e0;
   text-align: center;
   background-color: #B0E0E6
 }
+
 .register-page{
   height: 100vh;
   display:flex;
@@ -31,11 +32,12 @@ background-color: #f3d2e0;
   text-align: center;
   background-image: url("https://wallpapers.com/images/hd/4k-tech-ty39ncgwzl7k3taa.jpg");
   background-size:cover;
-  
 }
+
 .forgot-section{
   cursor: pointer;
 }
+
 .forgot-page{
   height: 100vh;
   display:flex;
@@ -87,10 +89,20 @@ background-color: #f3d2e0;
 
 .subject-Tasks{
   height: calc(100vh - 70px);
+  white-space: nowrap;
+  overflow:scroll;
+  text-overflow: ellipsis;
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.subject-alt{
   display:flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  text-wrap:wrap;
 }
 
 .btn-Edit{
@@ -190,8 +202,12 @@ width: 160px;
 
   .subject-Tasks{
     height: calc(100vh - 150px);
+    white-space: nowrap;
+    overflow:scroll;
+    text-overflow: ellipsis;
     display:flex;
     flex-direction: column;
+    align-items: center;
   }
 
   .button-size{
@@ -246,9 +262,11 @@ width: 160px;
 
   .subject-Tasks{
     height: calc(100vh - 66px);
+    white-space: nowrap;
+    overflow:scroll;
+    text-overflow: ellipsis;
     display:flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
   }
 
